# pixel-circuits

./: .gitignore  Cargo.toml  README.md
app/scss/: main.scss
backend/: Cargo.toml
backend/src/: error.rs  main.rs
backend/src/database/: mod.rs  models.rs  objects.rs  schema.rs
backend/src/versions/: mod.rs
common/: Cargo.toml
common/src/: config.rs  http.rs  lib.rs  object.rs  size.rs
frontend/: Cargo.toml  package.json  webpack.config.js
frontend/public/css/: main.css  main.css.map
frontend/src/: config.rs  error.rs  lib.rs  macros.rs  render_util.rs
frontend/src/canvas/: mod.rs
frontend/src/canvas/pixels/: map.rs  mod.rs  util.rs
frontend/src/editor/: event.rs  mod.rs  node.rs  util.rs
frontend/src/editor/state/: canvas.rs  init.rs  mod.rs
frontend/src/editor/ui/: button.rs  container.rs  input.rs  mod.rs
frontend/src/objects/: mod.rs  testobj.rs
frontend/src/objects/basic/: button.rs  led.rs  mod.rs  switch.rs
frontend/src/ui/: mod.rs  notification.rs  topbar.rs
frontend/src/ui/sidebar/: item_container.rs  mod.rs  start.rs
frontend/src/util/: ids.rs  mod.rs  statics.rs
frontend/static/: index.html
scripts/: backend.bat  frontend.bat  style.bat  terminal.bat
